firmware/build/log/idf_py_stderr_output_38899
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/position/software_tracker.cpp:76:16: error: expected initializer before 'SoftwareTracker'
   76 | void IRAM_ATTR SoftwareTracker::addPulses(int64_t count)
      |                ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/position/CMakeFiles/__idf_position.dir/software_tracker.cpp.obj] Error 1
make[1]: *** [esp-idf/position/CMakeFiles/__idf_position.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
